# libvips_flutter_package

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/libvips_flutter_package/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
messages/: vips_overlay.proto
native/hub/: Cargo.toml
native/hub/src/: lib.rs
native/hub/src/lib_vips/: mod.rs
