[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "6.10.0"
prost = "0.12.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
anyhow = "1.0.86"
libvips-rs = "8.15.1"
# wasm-bindgen = "0.2.92" # Uncomment this line to target the web
# tokio_with_wasm = "0.4.4" # Uncomment this line to target the web
